--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Jim+Nightshade&display=swap');
 
 /* General Styles */
@@ -171,7 +168,7 @@ body {
 .storefront-grid {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  gap: 2rem;
+  gap: 3rem;
   max-width: 1000px;
   justify-items: center;
   margin: 0 auto;
@@ -293,4 +290,34 @@ body {
   height: auto;
   object-fit: cover;
   border-radius: 12px;
+}
+
+/* Footer Styles */
+
+.site-footer {
+  background-color: var(--background);
+  padding: 2rem 1rem;
+  text-align: center;
+  font-size: 1rem;
+  color: var(--lightbackground);
+}
+
+.footer-content {
+  max-width: 1000px;
+  margin: 0 auto;
+}
+
+.footer-links {
+  margin-top: 1rem;
+}
+
+.footer-links a {
+  margin: 0 1rem;
+  color: var(--lightbackground);
+  text-decoration: none;
+  transition: color 0.3s ease;
+}
+
+.footer-links a:hover {
+  color: var(--text);
 }
