--- a/app/globals.css
+++ b/app/globals.css
@@ -9,6 +9,7 @@
 
 body {
   background-color: var(--background);
+  font-family: var(--font-domine), serif;
 }
 
 /* Hero Section */
@@ -111,45 +112,31 @@ body {
   height: auto;
   margin-right: 1rem;
   opacity: 0;
-  animation: fadeIn 0.5s ease-in-out forwards; 
-  animation-delay: 0.3s; 
+  transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
+  transform: translateY(-10px);
 }
 
-@keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
+.navbar.scrolled .nav-logo {
+  opacity: 1;
+  transform: translateY(0);
 }
 
-.fade-in {
-  animation-play-state: running;
-}
-
+/* Navbar Links */
 .nav-links {
   display: flex;
   gap: 1.5rem;
+  margin-left: 0;
   transition: margin-left 0.5s ease-in-out;
 }
-
-/* Links styling */
-.nav-links {
-  display: flex;
-  gap: 1.5rem;
-  transition: margin-left 0.4s ease-in-out;
-}
-
 .nav-links a {
   text-decoration: none;
-  color: black;
+  color: (var(--text));
   font-size: 1rem;
   transition: color 0.2s;
 }
 
 .nav-links a:hover {
-  color: #007bff;
+  color: var(--lightbackground);
 }
 
 /* Storefront Section */
@@ -247,7 +234,7 @@ body {
 
 .login-box h2 {
   font-size: 40px;
-  margin-bottom: 24px;
+  margin-bottom: 30px;
   color: var(--text);
 }
 
@@ -258,8 +245,8 @@ body {
 
 .login-box label {
   margin-bottom: 6px;
-  color: #555;
-  font-size: 14px;
+  color: var(--background);
+  font-size: 20px;
 }
 
 .login-box input {
